resource-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose-windows-amd64.exe convert
    kompose.version: 1.28.0 (c4137012e)
  creationTimestamp: null
  labels:
    io.kompose.service: resource-server
  name: resource-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: resource-server
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose-windows-amd64.exe convert
        kompose.version: 1.28.0 (c4137012e)
      creationTimestamp: null
      labels:
        io.kompose.network/keyist-ecommerce-default: "true"
        io.kompose.service: resource-server
    spec:
      containers:
        - env:
            - name: SECURITY_AUTH_CLIENT_ID
              value: test
            - name: SECURITY_AUTH_CLIENT_PASSWORD
              value: test
            - name: SECURITY_AUTH_URL
              value: http://authorization_server:8081/oauth/check_token
            - name: SPRING_DATASOURCE_PASSWORD
              value: keyistpassword
            - name: SPRING_DATASOURCE_URL
              value: jdbc:mysql://mysql:3306/keyist?useSSL=false&useUnicode=yes&characterEncoding=UTF-8&allowPublicKeyRetrieval=true
            - name: SPRING_DATASOURCE_USERNAME
              value: keyistuser
          image: keyist-resource-server:latest
          name: resource-server
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
